Fix overflow

--- a/contact.css
+++ b/contact.css
@@ -1,139 +1,140 @@
-*{
-    margin : 0px;
-    font-family: Arial;
-    border: border-box;
-    
+* {
+  margin: 0px;
+  font-family: Arial;
+  border: border-box;
+
 }
 
-body{
-    background-image: linear-gradient(to right top, #008793, #00bf72);
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: linear-gradient(to right top, #008793, #00bf72);
 }
 
-.navbar{
-    width: 100%;
-    height: 71px;
-    background-color: #212529;
-    
+.navbar {
+  width: 100%;
+  background-color: #212529;
+
 }
 
 
 
 .navbar-brand {
-    font-family: "Dancing Script";
-    font-weight: bolder;
-    font-size: 30px;
-    background-image: linear-gradient(to right top, #008793, #00bf72, #a8eb12);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-left: 110px;
+  font-family: "Dancing Script";
+  font-weight: bolder;
+  font-size: 30px;
+  background-image: linear-gradient(to right top, #008793, #00bf72, #a8eb12);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-left: 110px;
 }
 
-.nav-options{
-    color: white;
+.nav-options {
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  width: 270px;
+  margin-right: 100px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+
+.hero {
+  color: white;
+}
+
+.hero-text {
+  display: flex;
+  justify-content: center;
+}
+
+.hero p {
+  font-family: sans-serif;
+  font-size: 3rem;
+  margin-top: 20px;
+  display: block;
+}
+
+.hero-img {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.hero img {
+  height: 500px;
+  width: 50%;
+}
+
+
+footer {
+  padding: 10px;
+  margin-top: auto;
+  background-color: #1D1D1D;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #eee;
+}
+
+.container {
+  width: 35%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-column-gap: 5px;
+  justify-items: center;
+  grid-row-gap: 20px;
+
+  .box {
+    background-color: #ffffff;
+    width: 200px;
+    padding: 20px;
+    border-radius: 10px;
+    color: #000000;
     display: flex;
-    justify-content: space-around;
-    width: 270px;
-    margin-right: 100px;
-}
-
-a{
-    color: white;
-    text-decoration:none;
-    font-size: 15px;
-}
-
-
-.hero{
-    height: 90vh;
-    color: white;
-}
-
-.hero-text{
-    display: flex;
+    align-items: center;
     justify-content: center;
-}
-.hero p{
+    font-size: 40px;
     font-family: sans-serif;
-    font-size: 3rem;
-    margin-top: 20px;
-    display: block;
+  }
+
 }
 
-.hero-img{
-    display: flex;
-    width: 100%;
-    height: 70vh;
-    align-items: center;
-    justify-content: flex-end;
-    margin-top: 15px;
+.box:hover {
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.37);
 }
 
-.hero img{
-    height: 600px;
-    margin-right: 0px;
+i {
+  padding: 0px;
+
 }
 
 
-footer{
-    background-color: #1D1D1D;
-    height: 50px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.box {
+  display: flex;
+  flex-direction: column;
 }
 
-
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-  }
-  html{
-    background-color:#eee;
-  }
-  .container{
-    margin: 20px auto;
-    width:400px;
-    height:400px;
-    
-    display:grid;
-    grid-template-columns: 200px 200px;
-    grid-row: auto auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    .box{
-      background-color:#ffffff;
-      height: 200px;
-      width: 200px;
-      padding:20px;
-      border-radius:10px;
-      color:#000000;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:40px;
-      font-family:sans-serif;
-    }
-  
-  }
-
-  .box:hover{
-    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.37);
-  }
-
-  i{
-    padding: 0px;
-    
-  }
-
-
-  .box{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .box p{
-    font-size: 20px;
-  }
+.box p {
+  font-size: 20px;
+}
